
@startuml modeloclass

entity Escuelas {
  *Id_Escuela : INT (PK)
  --
  Nombre : VARCHAR
  Descripcion : VARCHAR
}

entity Tipos_Escuela {
  *Id_Tipo_Escuela : INT (PK)
  --
  Tipos_Escuela : VARCHAR
}

entity Usuarios {
  *Id_Usuario : INT (PK)
  --
  Primer_Nombre : VARCHAR
  Segundo_Nombre : VARCHAR
  Primer_Apellido : VARCHAR
  Segundo_Apellido : VARCHAR
  Id_Documento : INT (FK)
  Id_Estado : INT (FK)
  Num_Documento : VARCHAR
  Fecha_Nacimiento : DATE
  Id_L_Nacimiento : INT (FK)
  Id_Genero : INT (FK)
  Id_Rol : INT (FK)
  Id_Contacto : INT (FK)
  Id_Especialidad : INT (FK)
}

entity Lugar_de_Nacimiento {
  *Id_L_Nacimiento : INT (PK)
  --
  Id_Pais : INT (FK)
  Id_Dpto : INT (FK)
  Id_Mpio : INT (FK)
}

entity Documento_de_Identificacion {
  *Id_Documento : INT (PK)
  --
  Tipo_Documento : VARCHAR
}

entity Generos {
  *Id_Genero : INT (PK)
  --
  Genero : VARCHAR
}

entity Roles {
  *Id_Rol : INT (PK)
  --
  Rol : VARCHAR
}

entity Cursos {
  *Id_Curso : INT (PK)
  --
  Curso : VARCHAR
  Id_Recurso : INT (FK)
  Id_Horario : INT (FK)
  Fecha_Inicio : DATE
  Fecha_Fin : DATE
  Objetivo : VARCHAR
  Id_Nivel : INT (FK)
  Cupos : INT
  Cantidad_Alumnos : INT
  Id_Usuario : INT (FK)
}

entity Contactos {
  *Id_Contacto : INT (PK)
  --
  Telefono : VARCHAR
  Correo : VARCHAR
  Direccion : VARCHAR
}

entity Especialidades {
  *Id_Especialidad : INT (PK)
  --
  Especialidad : VARCHAR
}

entity Niveles {
  *Id_Nivel : INT (PK)
  --
  Nivel : VARCHAR
}

entity Niveles_Cursos{
  *Id_Nivel : INT (FK)
  *Id_Curso : INT (FK)
  --

}


entity Horarios {
  *Id_Horario : INT (PK)
  --
  Dia : VARCHAR
  Hora_Inicio : TIME
  Hora_Fin : TIME
}

entity Ubicaciones {
  *Id_Ubicacion : INT (PK)
  --
  Ubicacion : VARCHAR
}

entity Programa_De_formacion {
  *Id_Programa : INT (PK)
  --
  Id_Tipo_Escuela : INT (FK)
  Id_Escuela : INT (FK)
  Id_Ubicacion : INT (FK)
  Id_Curso : INT (FK)
  Id_Usuario : INT (FK)
}

entity Recursos {
  *Id_Recurso : INT (PK)
  --
  Recurso : VARCHAR
}

entity Estados {
  *Id_Estado : INT (PK)
  --
  Estado : VARCHAR
}

entity Permisos {
  *Id_Permiso : INT (PK)
  --
  Permiso : VARCHAR
  Descripcion : VARCHAR
}

entity Historial_de_Cambios {
  *Id : INT (PK)
  --
  Tabla : VARCHAR
  Id_Registro : INT
  Campo : VARCHAR
  Dato_Anterior : VARCHAR
  Dato_Nuevo : VARCHAR
  Fecha_Cambio : DATETIME
  Id_Usuario : INT (FK)
}

entity Seguridad {
  *Id : INT (PK)
  --
  Id_Usuario : INT (FK)
  Accion : VARCHAR
  Fecha : DATETIME
}

entity Pais {
  *Id_Pais : INT (PK)
  --
  Pais : VARCHAR
}

entity Departamentos {
  *Id_Dpto : INT (PK)
  --
  Id_Pais : INT (FK)
  Departamento : VARCHAR
}

entity Municipios {
  *Id_Mpio : INT (PK)
  --
  Id_Pais : INT (FK)
  Id_Dpto : INT (FK)
  Municipio : VARCHAR
}

entity Inscripciones {
  *Id_Inscripcion : INT (PK)
  --
  Id_Usuario : INT (FK)
  Id_Curso : INT (FK)
  Fecha_Inscripcion : DATE
}

entity Evaluaciones {
  *Id_Evaluacion : INT (PK)
  --
  Id_Usuario : INT (FK)
  Id_Curso : INT (FK)
  Fecha_Evaluacion : DATE
  Nota : DECIMAL
  Comentarios : VARCHAR
}

entity Nota_Final {
  *Id_Nota_Final : INT (PK)
  --
  Id_Usuario : INT (FK)
  Id_Curso : INT (FK)
  Nota_Final : DECIMAL
}

entity Roles_Permisos {
  Id_Rol : INT (FK)
  Id_Permiso : INT (FK)
  Fecha_Asignacion : DATETIME
}

Usuarios }|--|| Documento_de_Identificacion : ""
Usuarios }|--|| Estados : ""
Usuarios }|--|| Lugar_de_Nacimiento : ""
Usuarios }|--|| Generos : ""
Usuarios }|--|| Roles : ""
Usuarios }|--|| Contactos : ""
Usuarios }|--|| Especialidades : ""
Lugar_de_Nacimiento }|--|| Pais : ""
Lugar_de_Nacimiento }|--|| Departamentos : ""
Lugar_de_Nacimiento }|--|| Municipios : ""
Cursos }|--|| Recursos : ""
Cursos }|--|| Horarios : ""
Cursos }|--|| Usuarios : ""
Niveles_Cursos }|--|| Niveles : ""
Niveles_Cursos }|--|| Cursos : ""
Programa_De_formacion }|--|| Tipos_Escuela : ""
Programa_De_formacion }|--|| Escuelas : ""
Programa_De_formacion }|--|| Ubicaciones : ""
Programa_De_formacion }|--|| Cursos : ""
Programa_De_formacion }|--|| Usuarios : ""
Departamentos }|--|| Pais : ""
Municipios }|--|| Pais : ""
Municipios }|--|| Departamentos : ""
Inscripciones }|--|| Usuarios : ""
Inscripciones }|--|| Cursos : ""
Evaluaciones }|--|| Usuarios : ""
Evaluaciones }|--|| Cursos : ""
Nota_Final }|--|| Usuarios : ""
Nota_Final }|--|| Cursos : ""
Historial_de_Cambios }|--|| Usuarios : ""
Seguridad }|--|| Usuarios : ""
Roles_Permisos }|--|| Roles : ""
Roles_Permisos }|--|| Permisos : ""


@enduml